Change scrollbars custom colors

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -482,10 +482,10 @@ a.link-docs {
     height: 8px;
 }
 ::-webkit-scrollbar-track {
-    background: $editor-tooltip-bg;
+    background: #20292b;
 }
 ::-webkit-scrollbar-thumb {
-    background: black;
+    background: #5b7073;
 }
 ::-webkit-scrollbar-corner {
     background: $editor-tooltip-bg;
