Change 'strings' to 'tags' in attribute panel, Modify 'tags' field to accept other types apart from string, Added optional placeholder in SelectFields

--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -1039,6 +1039,11 @@ a:visited {
             color: $text-darkest;
             background-color: transparent;
         }
+
+        &[placeholder]:empty:before {
+            color: $text-darkest;
+            background-color: transparent;
+        }
     }
     > ul {
         color: $text-secondary;
