--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1051,7 +1051,8 @@ strong {
             line-height: 24px;
             vertical-align: top;
         }
-        &.field-strings {
+        &.field-tags {
+            line-height: 1;
             > .content > .ui-panel {
                 width: 100%;
                 // max-width: calc(100% - 77px);
@@ -1064,6 +1065,10 @@ strong {
                         margin: 1px 0 1px 1px;
                         flex-shrink: 0;
                         float: left;
+                    }
+                    > .ui-select-field {
+                        width: calc(100% - 2px);
+                        margin: 1px 0 1px 1px;
                     }
                     > .ui-button {
                         margin: 1px 1px 1px 0;
@@ -8176,6 +8181,7 @@ strong {
                         .ui-panel.sublayer + .ui-panel.sublayer.dragged {
                             margin-top: -1px;
                         }
+
                     }
                 }
             }
